--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -39,9 +39,9 @@ changelog:
   sort: asc
   filters:
     exclude:
-      - '^docs:'
+      - '^doc:'
       - '^test:'
-
+      - '^ci:'
 # The lines beneath this are called `modelines`. See `:help modeline`
 # Feel free to remove those if you don't want/use them.
 # yaml-language-server: $schema=https://goreleaser.com/static/schema.json
