--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
 name: goreleaser
 
-on: [push,pull_request]
+on: [ push,pull_request ]
 
 permissions:
   contents: write
@@ -9,13 +9,11 @@ jobs:
   goreleaser:
     runs-on: windows-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      -
-        name: Set up Go
+      - name: Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: '1.20.x'
